--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -3,4 +3,12 @@
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
+
+    <color name="colorActivityBackground">#313030</color>
+
+    <color name="colorTextViewHeading1">#FDFDFD</color>
+    <color name="colorTextViewHeading2">#FDFDFD</color>
+
+    <color name="colorIcon">#FFFFFF</color>
+    <color name="colorIconBackground">#000000</color>
 </resources>
