--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,16 @@
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
+
+    <color name="white">#FFFFFF</color>
+    <color name="black">#000000</color>
+
+    <color name="colorActivityBackground">#DFD9D9</color>
+
+    <color name="colorTextViewHeading1">#000000</color>
+    <color name="colorTextViewHeading2">#000000</color>
+
+
+    <color name="colorIcon">#000000</color>
+    <color name="colorIconBackground">#FFFFFF</color>
 </resources>
