--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,6 +6,22 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:windowBackground">@color/colorActivityBackground</item>
+
+        <item name="iconColor">@color/colorIcon</item>
+        <item name="iconBackgroundColor">@color/colorIconBackground</item>
+    </style>
+
+    <style name="AppTheme.TextView.Heading1" parent="TextAppearance.MaterialComponents.Headline1">
+        <item name="android:textColor">@color/colorTextViewHeading1</item>
+        <item name="android:textSize">@dimen/sizeTextViewHeading1</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="AppTheme.TextView.Heading2" parent="TextAppearance.MaterialComponents.Headline2">
+        <item name="android:textColor">@color/colorTextViewHeading2</item>
+        <item name="android:textSize">@dimen/sizeTextViewHeading2</item>
+        <item name="android:textStyle">bold</item>
     </style>
 
 </resources>
