Finished home design and implementation.

--- a/app/src/main/res/layout/item_certificate.xml
+++ b/app/src/main/res/layout/item_certificate.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/certificateCard"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+    android:layout_height="150dp"
     android:layout_margin="15dp"
     android:padding="10dp"
     app:cardBackgroundColor="@color/black"
@@ -55,6 +55,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="64dp"
+            android:scaleType="centerCrop"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/certificateConstantTV"
