--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,7 +7,7 @@
     <color name="white">#FFFFFF</color>
     <color name="black">#000000</color>
 
-    <color name="colorActivityBackground">#DFD9D9</color>
+    <color name="colorActivityBackground">#DAE2EF</color>
 
     <color name="colorTextViewHeading1">#000000</color>
     <color name="colorTextViewHeading2">#000000</color>
