--- a/app/src/main/res/layout/item_course.xml
+++ b/app/src/main/res/layout/item_course.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/courseCard"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+    android:layout_height="300dp"
     android:layout_margin="20dp"
     android:padding="10dp"
     app:cardCornerRadius="20dp"
@@ -24,6 +24,7 @@
             android:ellipsize="end"
             android:maxLines="3"
             android:minLines="2"
+            android:textColor="@color/white"
             android:textSize="36sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
