--- a/app/src/main/res/layout/item_certificate.xml
+++ b/app/src/main/res/layout/item_certificate.xml
@@ -9,7 +9,7 @@
     android:padding="10dp"
     app:cardBackgroundColor="@color/black"
     app:cardCornerRadius="15dp"
-    app:cardElevation="3dp">
+    app:cardElevation="5dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="wrap_content"
@@ -18,12 +18,12 @@
 
         <TextView
             android:id="@+id/certificateNameTV"
-            android:layout_width="100dp"
+            android:layout_width="150dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:text="TextView"
-            android:textColor="@color/white"
+            android:textColor="@color/certificateNameColor"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:text="UI Design" />
@@ -45,10 +45,11 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
+            android:scaleType="centerCrop"
+            android:src="@drawable/ic_android"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/certificateNameTV"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:src="@drawable/cert_logo" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
             android:id="@+id/certIllusIMG"
