--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
-    <color name="colorAccent">#03DAC5</color>
+    <color name="colorPrimary">#DD2C00</color>
+    <color name="colorPrimaryDark">#802009</color>
+    <color name="colorAccent">#D50000</color>
 
     <color name="white">#FFFFFF</color>
     <color name="black">#000000</color>
@@ -11,6 +11,8 @@
 
     <color name="colorTextViewHeading1">#000000</color>
     <color name="colorTextViewHeading2">#000000</color>
+
+    <color name="certificateNameColor">#0091EA</color>
 
     <array name="colorCourseCardBackground">
         <item>#303F9F</item>
